Removing shared overflow-x for body and main and keep it for body to remove minor site bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ body {
 
 body, main {
   position: relative;
-  overflow-x: hidden;
 }
 
 :is(html, body, nav, main, footer) {
